tests/invalid_ast_samples/70761b2829f2bc6774b0ad7a8d3127729565ee384f4a78e1e3502a970682fde7.py
from ast import Module
from ast import Pass
from ast import TryStar

tree = Module(
    body=[TryStar(body=[Pass()], handlers=[], orelse=[], finalbody=[])], type_ignores=[]
)

# version: 3.12.0
# seed = 3021191
#
# Source:
# try:
#     pass
#
#
# Error:
#     SyntaxError("expected 'except' or 'finally' block", ('<file>', 2, 9, '    pass\n', 2, -1))
